fix(LeaderBoard): ensure header stays hidden behind LeaderboardThead when scrolled to bottom with sticky position

--- a/frontend/src/Components/Pages/Leaderboards/LeaderBoard/LeaderBoardTHead/LeaderBoardTHead.module.scss
+++ b/frontend/src/Components/Pages/Leaderboards/LeaderBoard/LeaderBoardTHead/LeaderBoardTHead.module.scss
@@ -6,6 +6,7 @@
   left: 0;
   z-index: 10;
   transition: background-color .3s;
+  translate: 0 -10px;
 }
 
 .thead tr {
