--- a/frontend/src/Components/Pages/Leaderboards/LeaderBoard/LeaderboardHeader/LeaderboardHeader.module.scss
+++ b/frontend/src/Components/Pages/Leaderboards/LeaderBoard/LeaderboardHeader/LeaderboardHeader.module.scss
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: space-between;
   gap: 20px 50px;
+  padding: 0 2px;
   padding-block: 1.5rem;
   position: sticky;
   top: 89px;
